<resources>
    <string name="app_name">SeeFood</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="manualInput">Input Item Manually</string>
    <string name="registerWelcomeText">Fill out the form below \n to create an account.</string>
    <string name="apple_logo">Apple logo</string>
    <string name="machine_logo">Machine logo</string>
    <string name="register_username">Username</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="create_account_button">Sign up</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="loginWelcomeText">Welcome to SeeFood!</string>
    <string name="nutritional_app">Nutritional App</string>
    <string name="sign_up_text">New user? Click below to register.</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingsUserCategory">User Settings</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="name_title">Name</string>
    <string name="settings_logout_btn_title">Logout</string>
    <string name="settings_delete_account_title">Delete Account</string>
    <string name="camera">Camera</string>
    <string name="title_camera">Camera</string>
    <string name="settings_change_password">UPDATE PASSWORD</string>
    <string name="settings_change_email">UPDATE EMAIL</string>
    <string name="settings_change_name">UPDATE NAME</string>


</resources>