<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/loginBanner"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/loginWelcomeText"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/login_background">


        <ImageView
            android:id="@+id/loginAppleLogo"
            android:src="@mipmap/apple_logo"
            android:layout_width="131dp"
            android:layout_height="123dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/apple_logo"

            android:contentDescription="@string/apple_logo"/>

        <ImageView
            android:id="@+id/loginMachineLogo"
            android:src="@mipmap/machine_learning_logo"
            android:layout_width="117dp"
            android:layout_height="125dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginAppleLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.866"
            android:contentDescription="@string/machine_logo" />


        <TextView
            android:id="@+id/nutritional_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/nutritional_app"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginMachineLogo" />


        <EditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/register_text_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/your_email"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nutritional_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLoginPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputLoginEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:hintTextColor="@color/gray"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_text_background"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:drawablePadding="5dp"
                android:inputType="textPassword"


                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:background="@color/design_default_color_primary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLoginPasswordLayout" />



        <TextView
            android:id="@+id/loginToSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <Button
            android:id="@+id/loginToSignUpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="64dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/sign_up_button"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginToSignUpText" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>